--- a/webcrate/static/index.html
+++ b/webcrate/static/index.html
@@ -41,9 +41,9 @@
       <h2>📚 Log Report</h2>
       <ul id="log-entries"></ul>
     
-      <div class="controls">
+      <!-- <div class="controls">
         <button id="next-btn" style="display:none;">➡️ Scan Next Link</button>
-      </div>
+      </div> -->
     </section>
   </div>
 
